--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  "onlyamsmath.doc.tar.xz": 43875b4ebe31c35a1792c41f5db8621ac9f1e3b2
-  "onlyamsmath.source.tar.xz": 8c3863f52102e0b93ead3afa65eef2af37167b76
-  "onlyamsmath.tar.xz": 61f8baf96576f636d40e429deeed8491edfbb0d3
+  onlyamsmath.doc.tar.xz: 91897f640fa40ff2ab0a21274cbfa2d5f77e1a34
+  onlyamsmath.source.tar.xz: 7c9926a52bc3dbd8c81fe89cebef7e157861523d
+  onlyamsmath.tar.xz: d42439feadd60c8bbb2482546278af51e3041a5b
